# flames

./: .gitignore  README.md  pyproject.toml
examples/: rotate_animation.py
examples/flames/: bubbles.json  cosine.json  dragon.json  eyes.json  fern.json  image.json  julia_spiral.json  pinch.json  spherical.json  spike.json  swirl.json  swirl_variation.json  triangle.json  triangle_variation.json  tsquare.json
src/flames/: animation.py  editor.py  flames.frag  interpolate.py  render.py  renderer.py
src/flames/backend/: __init__.py  basic.py  common.py  shuffler.py
